Fix border on hovered comment collapse button

--- a/tildes/scss/themes/_theme_base.scss
+++ b/tildes/scss/themes/_theme_base.scss
@@ -160,6 +160,10 @@ body {
     }
   }
 
+  .btn-comment-collapse:hover {
+    border-color: var(--border);
+  }
+
   .btn-light {
     color: var(--foreground-secondary);
     border-color: var(--border);
